修改 Makefile，使能找到 `../common/BOBHash32.cpp` 从而编译成功

--- a/src/CPU/demo/Makefile
+++ b/src/CPU/demo/Makefile
@@ -7,50 +7,50 @@ FILES = elastic.out cmheap.out cmsketch.out cusketch.out countheap.out countsket
 
 all: $(FILES) 
 
-elastic.out: elastic.cpp
-	$(GCC) $(CFLAGS) $(SSEFLAGS) -o elastic.out elastic.cpp
+elastic.out: elastic.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) $(SSEFLAGS) -o elastic.out elastic.cpp BOBHash32.o
 
-cmheap.out: cmheap.cpp
-	$(GCC) $(CFLAGS) -o cmheap.out cmheap.cpp
+cmheap.out: cmheap.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) -o cmheap.out cmheap.cpp BOBHash32.o
 
-countheap.out: countheap.cpp
-	$(GCC) $(CFLAGS) -o countheap.out countheap.cpp
+countheap.out: countheap.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) -o countheap.out countheap.cpp BOBHash32.o
 
-cmsketch.out: cmsketch.cpp
-	$(GCC) $(CFLAGS) -o cmsketch.out cmsketch.cpp
+cmsketch.out: cmsketch.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) -o cmsketch.out cmsketch.cpp BOBHash32.o
 
-cusketch.out: cusketch.cpp
-	$(GCC) $(CFLAGS) -o cusketch.out cusketch.cpp
+cusketch.out: cusketch.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) -o cusketch.out cusketch.cpp BOBHash32.o
 
-countsketch.out: countsketch.cpp
-	$(GCC) $(CFLAGS) -o countsketch.out countsketch.cpp
+countsketch.out: countsketch.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) -o countsketch.out countsketch.cpp BOBHash32.o
 
-hashpipe.out: hashpipe.cpp
-	$(GCC) $(CFLAGS) -o hashpipe.out hashpipe.cpp
+hashpipe.out: hashpipe.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) -o hashpipe.out hashpipe.cpp BOBHash32.o
 
-linearcounting.out: linearcounting.cpp
-	$(GCC) $(CFLAGS) -o linearcounting.out linearcounting.cpp
+linearcounting.out: linearcounting.cpp BOBHash32.o 
+	$(GCC) $(CFLAGS) -o linearcounting.out linearcounting.cpp BOBHash32.o
 
-mrac.out: mrac.cpp
-	$(GCC) $(CFLAGS) -o mrac.out mrac.cpp
+mrac.out: mrac.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) -o mrac.out mrac.cpp BOBHash32.o
 
-sieving.out:
-	$(GCC) $(CFLAGS) -o sieving.out sieving.cpp
+sieving.out: BOBHash32.o
+	$(GCC) $(CFLAGS) -o sieving.out sieving.cpp BOBHash32.o
 
 spacesaving.out:
 	$(GCC) $(CFLAGS) -o spacesaving.out spacesaving.cpp
 
-univmon.out:
-	$(GCC) $(CFLAGS) -o univmon.out univmon.cpp
+univmon.out: BOBHash32.o
+	$(GCC) $(CFLAGS) -o univmon.out univmon.cpp BOBHash32.o
 
-css.out:
-	$(GCC) $(CFLAGS) -o css.out css.cpp
+css.out: BOBHash32.o
+	$(GCC) $(CFLAGS) -o css.out css.cpp BOBHash32.o
 
-flowradar.out:
-	$(GCC) $(CFLAGS) -o flowradar.out flowradar.cpp	
+flowradar.out: BOBHash32.o
+	$(GCC) $(CFLAGS) -o flowradar.out flowradar.cpp	BOBHash32.o
 
-reversiblesketch.out: common.o os_galoisField.o os_mangler.o
-	$(GCC) $(CFLAGS) -o reversiblesketch.out reversiblesketch.cpp common.o os_galoisField.o os_mangler.o
+reversiblesketch.out: common.o os_galoisField.o os_mangler.o BOBHash32.o
+	$(GCC) $(CFLAGS) -o reversiblesketch.out reversiblesketch.cpp common.o os_galoisField.o os_mangler.o BOBHash32.o
 
 common.o:
 	$(GCC) $(CFLAGS) -c ../common/common.cc
@@ -61,6 +61,9 @@ os_galoisField.o:
 os_mangler.o:
 	$(GCC) $(CFLAGS) -c ../common/os_mangler.cc
 
+# undefined reference to `BOBHash32:
+BOBHash32.o:
+	$(GCC) $(CFLAGS) -c ../common/BOBHash32.cpp
 
 clean:
 	rm $(all) -f *~ *.o *.out
