修改 demo，使用 #ifndef 使得 Makefile 能够在编译时传入 -DVar=Value，来修改 测试数据范围和 Memory Usage.
增加 exp.sh 修改 Makefile 遍历 测试数据范围和 Memory Usage，
每条 sketch,memory(KB),idx,ARE 存于 exp.csv，

然后使用 python 画图：
- 绘制 fig1.png 0.dat 在不同 memory usage 下的表现
- 绘制 fig2.png 固定 memory usage = 600KB，所有 data 的条形图和误差线

--- a/src_/demo/Makefile
+++ b/src_/demo/Makefile
@@ -3,22 +3,24 @@ CFLAGS = -O2 -std=c++14
 SSEFLAGS = -msse2 -mssse3 -msse4.1 -msse4.2 -mavx -march=native
 FILES = elastic.out elastic_my.out cmsketch.out cusketch.out countsketch.out
 
+DFLAGs = -DSTART_FILE_NO=1 -DEND_FILE_NO=10 -DTOT_MEM_IN_BYTES=614400
+
 all: $(FILES) 
 
 elastic.out: elastic.cpp BOBHash32.o
-	$(GCC) $(CFLAGS) $(SSEFLAGS) -o elastic.out elastic.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) $(DFLAGs) $(SSEFLAGS) -o elastic.out elastic.cpp BOBHash32.o
 
 elastic_my.out: elastic_my.cpp BOBHash32.o
-	$(GCC) $(CFLAGS) $(SSEFLAGS) -o elastic_my.out elastic_my.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) $(DFLAGs) $(SSEFLAGS) -o elastic_my.out elastic_my.cpp BOBHash32.o
 
 cmsketch.out: cmsketch.cpp BOBHash32.o
-	$(GCC) $(CFLAGS) -o cmsketch.out cmsketch.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) $(DFLAGs) -o cmsketch.out cmsketch.cpp BOBHash32.o
 
 cusketch.out: cusketch.cpp BOBHash32.o
-	$(GCC) $(CFLAGS) -o cusketch.out cusketch.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) $(DFLAGs) -o cusketch.out cusketch.cpp BOBHash32.o
 
 countsketch.out: countsketch.cpp BOBHash32.o
-	$(GCC) $(CFLAGS) -o countsketch.out countsketch.cpp BOBHash32.o
+	$(GCC) $(CFLAGS) $(DFLAGs) -o countsketch.out countsketch.cpp BOBHash32.o
 
 common.o:
 	$(GCC) $(CFLAGS) -c ../common/common.cc
